--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1657,6 +1657,11 @@ footer a,
 
 @media (max-width: 720px) {
 
+  html,
+  body {
+    overflow-x: hidden;
+  }
+
   .news-header,
   .section-head {
     flex-direction: column;
